--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -866,6 +866,9 @@
                     <br/>
                     <div class="small" style="margin-left: 18px;">
                         @file.MimeType (@file.AssetMetadata.GetFormatName())
+                        <a 
+                            href="https://www.nationalarchives.gov.uk/PRONOM/PUID/proPUIDSearch.aspx?status=new" 
+                            target="_blank">@file.AssetMetadata.GetPronomKey()</a>
                         <br/>
                         @if (dlcsImage != null)
                         {
