look for dimension information in Archivematica tool outputs

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -871,6 +871,8 @@
                             var tnaPage = "https://www.nationalarchives.gov.uk/PRONOM/" + pronomKey;
                         }
                         <a href="@tnaPage" target="_blank">@pronomKey</a>
+                        |
+                        @file.AssetMetadata.GetMediaDimensions().ToString()
                         <br/>
                         @if (dlcsImage != null)
                         {
