--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Fixtures/Fixtures.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Fixtures/Fixtures.cshtml
@@ -27,7 +27,7 @@
             <td>@Html.ActionLink(identifier.PackageIdentifier, "Manifestation", "Dash", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
             <td>@Html.ActionLink("METS Root", "XmlView", "Peek", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
             <td>@Html.ActionLink("Storage manifest", "StorageManifest", "Peek", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
-            <td>@Html.ActionLink("Workflow call", "GoobiCall", "GoobiCall", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
+            <td>@Html.ActionLink("Workflow call", "GoobiCall", "WorkflowCall", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
         </tr>
     }
     </tbody>
