--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li>
                         <a asp-controller="Account" asp-action="UserPage" title="@User.Identity.Name"><span class="glyphicon glyphicon-user"></span></a>
                     </li>
-                    <li>@Html.ActionLink("Workflow", "Stats", "GoobiCall")</li>
+                    <li>@Html.ActionLink("Workflow", "Stats", "WorkflowCall")</li>
                     <li>@Html.ActionLink("Jobs", "Recent", "Job")</li>
                     <li>@Html.ActionLink("Queue", "Queue", "Dash")</li>
                     <li>@Html.ActionLink("Status", "Status", "Dash")</li>
