--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/Stats.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/Stats.cshtml
@@ -46,9 +46,9 @@
             <strong>@Model.EstimatedCompletion</strong>
             <p>
                 <br/>
-                @Html.ActionLink("Recent workflow calls", "Recent", "GoobiCall")
+                @Html.ActionLink("Recent workflow calls", "Recent", "WorkflowCall")
                 |
-                @Html.ActionLink("Errors", "Errors", "GoobiCall")
+                @Html.ActionLink("Errors", "Errors", "WorkflowCall")
             </p>
         </td>
     </tr>
