--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/GoobiCall.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/GoobiCall.cshtml
@@ -36,13 +36,13 @@ else
 }
 
 <ul class="list-group">
-    <li class="list-group-item"><a href="@Url.Action("Create", "GoobiCall", new {id = Model.Identifier})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Goobi Call</a></li>
+    <li class="list-group-item"><a href="@Url.Action("Create", "WorkflowCall", new {id = Model.Identifier})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Goobi Call</a></li>
     <li class="list-group-item">@Html.ActionLink("DDS View of " + @Model.Identifier, "Manifestation", "Dash", new {id = @Model.Identifier}, new {})</li>
     <li class="list-group-item"><a href="@Url.Action("StorageManifest", "Peek", new {id = Model.Identifier})">Storage Manifest</a></li>
     <li class="list-group-item"><a href="@Url.Action("XmlView", "Peek", new {id = Model.Identifier, parts = Model.Identifier + ".xml"})">METS file</a></li>
 </ul>
 <ul class="list-group">
-    <li class="list-group-item">@Html.ActionLink("Show Recent Calls", "Recent", "GoobiCall")</li>
+    <li class="list-group-item">@Html.ActionLink("Show Recent Calls", "Recent", "WorkflowCall")</li>
 </ul>
 
 @if (Model.Created.HasValue)
