--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/GoobiCallList.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/GoobiCallList.cshtml
@@ -22,12 +22,12 @@
 <p>
 @if (ViewBag.IsErrorList)
 {
-    <text>(showing errors only) @Html.ActionLink("Show all", "Recent", "GoobiCall")</text>
+    @:(showing errors only) @Html.ActionLink("Show all", "Recent", "WorkflowCall")
 }
 else
 {
-    <text>@Html.ActionLink("Show errors only", "Errors", "GoobiCall")</text>
+    @Html.ActionLink("Show errors only", "Errors", "WorkflowCall")
 }
- | @Html.ActionLink("Workflow statistics", "Stats", "GoobiCall") 
+ | @Html.ActionLink("Workflow statistics", "Stats", "WorkflowCall")
 </p>
 <partial name="_WorkflowJobList" model="Model" />
