more removal of string 'Goobi' and replace by 'Workflow'

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
@@ -23,7 +23,7 @@
 <h2>Recently Digitised</h2>
 
 <p>
-    @Html.ActionLink("View recent workflow (Goobi calls)", "Recent", "WorkflowCall")
+    @Html.ActionLink("View recent workflow calls", "Recent", "WorkflowCall")
     | 
     @Html.ActionLink("View Job Processor log", "Index", "Log")
     |
