--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/Stats.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/Stats.cshtml
@@ -1,14 +1,14 @@
 ﻿@model WorkflowCallStats
 
 @{
-    ViewBag.Title = "Goobi Call Stats";
+    ViewBag.Title = "Workflow call stats";
 }
 
 <a id="top"></a>
 
 
 <div class="col-md-12">
-    <h3 style="margin: 25px 0 20px 0">Goobi call stats</h3>
+    <h3 style="margin: 25px 0 20px 0">Workflow call stats</h3>
 </div>
 
 <table class="table">
