--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCallList.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCallList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<WorkflowJob>
 
 @{
-    ViewBag.Title = "RecentGoobiCalls";
+    ViewBag.Title = "Recent Workflow Calls";
 }
 
 <a id="top"></a>
@@ -16,7 +16,7 @@
             <strong>@TempData["reset-errors"]</strong>
         </div>
     }
-    <h3 style="margin: 25px 0 20px 0">Recent Goobi calls</h3>
+    <h3 style="margin: 25px 0 20px 0">Recent workflow calls</h3>
 </div>
 
 <p>
