fix some over-use of package identifier - need the Manifestation ID in many cases

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Peek/Code.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Peek/Code.cshtml
@@ -23,7 +23,7 @@
             <a href="@Model.Raw">Raw</a> 
             |
             @Html.ActionLink( "Manifestation", "Manifestation", "Dash", 
-                new {id = Model.Identifier.PackageIdentifierPathElementSafe})
+                new {id = Model.Identifier.PathElementSafe})
             @if (Model.AnchorFile.HasText())
             {
                 @: | <a href="@Model.AnchorFile">Anchor file</a>
