--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCall.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCall.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Wellcome.Dds.AssetDomain.Workflow.WorkflowJob
 
 @{
+    var ddsId = new DdsIdentifier(Model.Identifier);
     if (!Model.Created.HasValue)
     {
         ViewBag.Title = "b number not called";
     }
     else
     {
-        ViewBag.Title = "Workflow call for " + Model.Identifier;
+        ViewBag.Title = "Workflow call for " + ddsId;
     }
 }
 
@@ -28,18 +29,18 @@
 
 @if (!Model.Created.HasValue)
 {
-    <h2>No DDS Call found for @Model.Identifier</h2>
+    <h2>No DDS Call found for @ddsId</h2>
 }
 else
 {
-    <h2>Workflow call for @Model.Identifier</h2>
+    <h2>Workflow call for @ddsId</h2>
 }
 
 <ul class="list-group">
-    <li class="list-group-item"><a href="@Url.Action("Create", "WorkflowCall", new {id = Model.Identifier})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Workflow Call</a></li>
-    <li class="list-group-item">@Html.ActionLink("DDS View of " + @Model.Identifier, "Manifestation", "Dash", new {id = @Model.Identifier}, new {})</li>
-    <li class="list-group-item"><a href="@Url.Action("StorageManifest", "Peek", new {id = Model.Identifier})">Storage Manifest</a></li>
-    <li class="list-group-item"><a href="@Url.Action("XmlView", "Peek", new {id = Model.Identifier, parts = Model.Identifier + ".xml"})">METS file</a></li>
+    <li class="list-group-item"><a href="@Url.Action("Create", "WorkflowCall", new {id = ddsId.PathElementSafe})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Workflow Call</a></li>
+    <li class="list-group-item">@Html.ActionLink("DDS View of " + ddsId, "Manifestation", "Dash", new {id = ddsId.PathElementSafe}, new {})</li>
+    <li class="list-group-item"><a href="@Url.Action("StorageManifest", "Peek", new {id = ddsId.PathElementSafe})">Storage Manifest</a></li>
+    <li class="list-group-item"><a href="@Url.Action("XmlView", "Peek", new {id = ddsId.PathElementSafe, parts = ddsId.PathElementSafe + ".xml"})">METS file</a></li>
 </ul>
 <ul class="list-group">
     <li class="list-group-item">@Html.ActionLink("Show Recent Calls", "Recent", "WorkflowCall")</li>
@@ -56,8 +57,8 @@ else
         </thead>
         <tbody>
             <tr>
-                <td>B Number</td>
-                <td>@Model.Identifier</td>
+                <td>Identifier</td>
+                <td>@ddsId</td>
             </tr>
             <tr>
                 <td>Force text</td>
