Pass 1 for job processing - naming of classes

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Collection.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Collection.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wellcome.Dds.AssetDomain.DigitalObjects.IDigitisedCollection
+﻿@model Wellcome.Dds.AssetDomain.DigitalObjects.IDigitalCollection
 
 @{
     ViewBag.Title = "Dash: " + Model.Identifier;
